k8s/wodify_service.yml
apiVersion: v1
kind: Service
metadata:
  name: wodify-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: wodify
