k8s/wodify_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wodify-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "server.wodify.site"
      secretName: wodify-com-tls
  rules:
    - host: server.wodify.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wodify-service
                port:
                  number: 80
